<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bmiLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/bmi_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/height_logo"
        app:layout_constraintBottom_toBottomOf="@id/heightEditTextLayout"
        app:layout_constraintStart_toStartOf="@id/heightEditTextLayout"
        app:layout_constraintTop_toTopOf="@id/heightEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_height_in_inch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/weight_logo"
        app:layout_constraintBottom_toBottomOf="@id/weightEditTextLayout"
        app:layout_constraintStart_toStartOf="@id/weightEditTextLayout"
        app:layout_constraintTop_toTopOf="@id/weightEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_weight_in_kg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculateBmiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_shape"
        android:backgroundTint="@color/black"
        android:text="@string/calculate_bmi"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightEditTextLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculateBmiButton">

        <TextView
            android:id="@+id/bmiResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_shape"
            android:padding="5dp"
            android:text="@string/your_bmi_calculate_first_than_see_here"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bmiClassification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_shape"
            android:padding="5dp"
            android:text="@string/your_bmi_classification_calculate_first_than_see_here"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>